fix for JDK 21 ci failure