@@ -48,7 +48,8 @@
     <commons.jira.pid>12310460</commons.jira.pid>
     <!-- limit memory size see BEANUTILS-291; allow command-line override -->
     <!-- Originally 25M, increased to 56M to get round Continuum CI / Travis CI build failures -->
-    <surefire.argLine>-Xmx256M</surefire.argLine>
+    <!-- Locale needs to be explicitly set to COMPAT to prevent test failure in JDK 21 and above due to Locale changes -->
+    <surefire.argLine>-Xmx256M -Djava.locale.providers=COMPAT</surefire.argLine>
     <commons.encoding>utf-8</commons.encoding>
     <!-- Commons Release Plugin -->
     <commons.bc.version>2.0.0-SNAPSHOT</commons.bc.version>
@@ -371,7 +372,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <forkMode>pertest</forkMode>
+          <reuseForks>false</reuseForks>
           <!-- limit memory size see BEANUTILS-291
                      ..also include ${argLine} from jacoco-maven-plugin
           -->
@@ -527,9 +528,8 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>findbugs-maven-plugin</artifactId>
-        <version>${commons.findbugs.version}</version>
+        <groupId>com.github.spotbugs</groupId>
+        <artifactId>spotbugs-maven-plugin</artifactId>
         <configuration>
           <threshold>Normal</threshold>
           <effort>Default</effort>
